--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul class="left-bar">
         <li><a href="index.html">Accueil</a></li>
         <li><a href="sccs.html">Scss</a></li>
-        <li><a href="#">Git repository</a></li>
+        <li><a href="https://github.com/lambiase1u/Frameworkcss">Git repository</a></li>
     </ul>
     <ul class="center-bar">
     </ul>
